--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ whitenoise==5.2.0
 django-bootstrap4==2.3.1
 django-bootstrap-datepicker-plus==3.0.5
 splinter==0.16.0
+webdriver-manager==3.5.2
+selenium==3.141.0
