--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-asgiref==3.2.10
-dj-database-url==0.5.0
+dj_database_url==0.5.0
 Django==3.1.1
-gunicorn==20.0.4
-parameterized==0.7.4
-psycopg2-binary==2.8.6
-pytz==2020.5
-sqlparse==0.4.1
-whitenoise==5.2.0
-django-bootstrap4==2.3.1
-django-bootstrap-datepicker-plus==3.0.5
-splinter==0.16.0
-webdriver-manager==3.5.2
 selenium==3.141.0
+splinter==0.16.0
+webdriver_manager==3.5.2
