--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,34 @@
-asgiref==3.2.10
+autopep8==1.6.0
+beautifulsoup4==4.10.0
+bootstrap4==0.1.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+colorama==0.4.4
+configparser==5.1.0
+crayons==0.4.0
 dj-database-url==0.5.0
 Django==3.1.1
-gunicorn==20.0.4
-parameterized==0.7.4
-psycopg2-binary==2.8.6
-pytz==2020.5
-sqlparse==0.4.1
-whitenoise==5.2.0
-django-bootstrap4==2.3.1
 django-bootstrap-datepicker-plus==3.0.5
+django-bootstrap4==2.3.1
+docopt==0.6.2
+gunicorn==20.0.4
+idna==3.3
+parameterized==0.7.4
+pip==21.3.1
+pipreqs==0.4.11
+psycopg2-binary==2.8.6
+pycodestyle==2.8.0
+pytz==2020.5
+requests==2.26.0
+selenium==3.141.0
+setuptools==58.1.0
+six==1.16.0
+soupsieve==2.2.1
+splinter==0.16.0
+sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.7
+webdriver-manager==3.5.2
+wheel==0.37.0
+whitenoise==5.2.0
+yarg==0.1.9
