--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ test:
     script:
         - python manage.py migrate
         - python manage.py test
+        - npm run test
 
 staging:
     stage: deploy
