--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "directories": {
     "doc": "docs"
   },
+  "engines": {
+    "node": "14.x"
+  },
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
