--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ test:
     stage: test
     before_script:
         - pip install -r requirements.txt
-        - apt-get install npm
+        - apt install npm
         - npm install -g jest
     script:
         - python manage.py migrate
