--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ test:
     stage: test
     before_script:
         - pip install -r requirements.txt
+        - apt update
         - apt install npm
         - npm install -g jest
     script:
