--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ sqlparse==0.4.1
 whitenoise==5.2.0
 django-bootstrap4==2.3.1
 django-bootstrap-datepicker-plus==3.0.5
+django-compressor==2.4.1
+django-compressor-toolkit==0.6.0
