--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ test:
         - pip install -r requirements.txt
         - pip install django_compressor
         - pip install compressor_toolkit
+        - /usr/local/bin/python -m pip install --upgrade pip
         - apt update
         - apt install npm -y
         - npm install -g jest
