--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ staging:
         - apt-get update -qy
         - apt-get install -y ruby-dev
         - gem install dpl
+        - apt install npm -y
         - npm install
     script:
         - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY --run='python manage.py migrate'
