--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ django-bootstrap4==2.3.1
 django-bootstrap-datepicker-plus==3.0.5
 django-compressor==2.4.1
 django-compressor-toolkit==0.6.0
+django-appconf==1.0.5
+django-environ==0.8.1
