--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,7 @@ staging:
         - npm install
         - pip install Django
     script:
+        - source \venv\bin\activate
         - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY --run='python manage.py migrate'
         - python manage.py compress
+        
