--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ test:
         - apt update -y
         - apt install npm -y
         - npm install -g jest
+        - jest --init
     script:
         - python -m pip install --upgrade pip
         - python manage.py migrate
