--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ test:
     script:
         - python -m pip install --upgrade pip
         - python manage.py migrate
-        - find . -name '*.test.js' | npm run test
+        - npm run test
 
 staging:
     stage: deploy
