--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ staging:
         - apt install npm -y
         - npm install
     script:
-        - export -debug=TRUE
+        - export -DEBUG=True
         - python manage.py makemigrations
         - python manage.py migrate
         - python manage.py collectstatic --noinput
